; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/mrsas/extr_mrsas_cam.c_mrsas_bus_scan_sim.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/mrsas/extr_mrsas_cam.c_mrsas_bus_scan_sim.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mrsas_softc = type { i32 }
%struct.cam_sim = type { i32 }
%union.ccb = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@ENOMEM = common dso_local global i32 0, align 4
@xpt_periph = common dso_local global i32 0, align 4
@CAM_TARGET_WILDCARD = common dso_local global i32 0, align 4
@CAM_LUN_WILDCARD = common dso_local global i32 0, align 4
@CAM_REQ_CMP = common dso_local global i64 0, align 8
@EIO = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mrsas_bus_scan_sim(%struct.mrsas_softc* %0, %struct.cam_sim* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.mrsas_softc*, align 8
  %5 = alloca %struct.cam_sim*, align 8
  %6 = alloca %union.ccb*, align 8
  store %struct.mrsas_softc* %0, %struct.mrsas_softc** %4, align 8
  store %struct.cam_sim* %1, %struct.cam_sim** %5, align 8
  %7 = call %union.ccb* (...) @xpt_alloc_ccb()
  store %union.ccb* %7, %union.ccb** %6, align 8
  %8 = icmp eq %union.ccb* %7, null
  br i1 %8, label %9, label %11

9:                                                ; preds = %2
  %10 = load i32, i32* @ENOMEM, align 4
  store i32 %10, i32* %3, align 4
  br label %39

11:                                               ; preds = %2
  %12 = load %struct.mrsas_softc*, %struct.mrsas_softc** %4, align 8
  %13 = getelementptr inbounds %struct.mrsas_softc, %struct.mrsas_softc* %12, i32 0, i32 0
  %14 = call i32 @mtx_lock(i32* %13)
  %15 = load %union.ccb*, %union.ccb** %6, align 8
  %16 = bitcast %union.ccb* %15 to %struct.TYPE_2__*
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i32, i32* @xpt_periph, align 4
  %19 = load %struct.cam_sim*, %struct.cam_sim** %5, align 8
  %20 = call i32 @cam_sim_path(%struct.cam_sim* %19)
  %21 = load i32, i32* @CAM_TARGET_WILDCARD, align 4
  %22 = load i32, i32* @CAM_LUN_WILDCARD, align 4
  %23 = call i64 @xpt_create_path(i32* %17, i32 %18, i32 %20, i32 %21, i32 %22)
  %24 = load i64, i64* @CAM_REQ_CMP, align 8
  %25 = icmp ne i64 %23, %24
  br i1 %25, label %26, label %33

26:                                               ; preds = %11
  %27 = load %union.ccb*, %union.ccb** %6, align 8
  %28 = call i32 @xpt_free_ccb(%union.ccb* %27)
  %29 = load %struct.mrsas_softc*, %struct.mrsas_softc** %4, align 8
  %30 = getelementptr inbounds %struct.mrsas_softc, %struct.mrsas_softc* %29, i32 0, i32 0
  %31 = call i32 @mtx_unlock(i32* %30)
  %32 = load i32, i32* @EIO, align 4
  store i32 %32, i32* %3, align 4
  br label %39

33:                                               ; preds = %11
  %34 = load %struct.mrsas_softc*, %struct.mrsas_softc** %4, align 8
  %35 = getelementptr inbounds %struct.mrsas_softc, %struct.mrsas_softc* %34, i32 0, i32 0
  %36 = call i32 @mtx_unlock(i32* %35)
  %37 = load %union.ccb*, %union.ccb** %6, align 8
  %38 = call i32 @xpt_rescan(%union.ccb* %37)
  store i32 0, i32* %3, align 4
  br label %39

39:                                               ; preds = %33, %26, %9
  %40 = load i32, i32* %3, align 4
  ret i32 %40
}

declare dso_local %union.ccb* @xpt_alloc_ccb(...) #1

declare dso_local i32 @mtx_lock(i32*) #1

declare dso_local i64 @xpt_create_path(i32*, i32, i32, i32, i32) #1

declare dso_local i32 @cam_sim_path(%struct.cam_sim*) #1

declare dso_local i32 @xpt_free_ccb(%union.ccb*) #1

declare dso_local i32 @mtx_unlock(i32*) #1

declare dso_local i32 @xpt_rescan(%union.ccb*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
